--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://bdd-unlam.github.io" # the base hostname & protocol for your site
 
+gems:
+  - minima
 
 # Build settings
 markdown: kramdown
