--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
+title: UNLaM - Cátedra de Base de Datos
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  En este sitio encontrarás documentación, apuntes y prácticas 
+  utilizados en la cátedra de Base de Datos de la Universidad Nacional de La Matanza.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://bdd-unlam.github.io" # the base hostname & protocol for your site
 
